--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -69,23 +69,29 @@
    "source": [
     "plt.figure(figsize=(cm_to_inch(16),cm_to_inch(18)))\n",
     "plt.subplot(2,2,1)\n",
+    "plt.title(\"Electrical field\")\n",
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
-    "plt.plot(x1,y1,'k-')\n",
+    "plt.plot(x1,y1+y2,'k-')\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
     "\n",
     "plt.subplot(2,2,2)\n",
-    "###plt.title(\"(b)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "plt.title(\"Frequency  distribution\")\n",
+    "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.subplot(2,2,3)\n",
-    "##plt.title(\"(c)\",titleLoc)\n",
-    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "plt.title(\"Spectrum\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
@@ -93,7 +99,14 @@
     "plt.colorbar(location = 'bottom')\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)"
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
+    "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
    ]
   },
   {
