--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -348,6 +348,7 @@
     "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
     "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "cb.locator = tick_locator\n",
     "# cb.set_ticks([0.0,0.5,1.0,1.5,2.0])\n",
     "cb.update_ticks()\n",
