--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -350,10 +350,7 @@
     "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
     "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "cb.locator = tick_locator\n",
-    "# cb.set_ticks([0.0,0.5,1.0,1.5,2.0])\n",
     "cb.update_ticks()\n",
-    "\n",
-    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "# position=fig.add_axes([0.25,1.0005,0.5,1.0003])\n",
     "# cb=plt.colorbar(im,cax=position,fraction=0.15,shrink=0.5,aspect=10,orientation='horizontal')\n",
     "\n",
@@ -369,10 +366,9 @@
     "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
-    "cb.locator = tick_locator\n",
-    "# cb.set_ticks([0.0,0.5,1.0,1.5,2.0])\n",
-    "cb.update_ticks()\n",
     "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
     "# plt.colorbar(im)\n",
     "# plt.yticks([90,180,270])\n",
     "setlabel2(ax,'(e)')\n",
@@ -388,9 +384,9 @@
     "# plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "cb.locator = tick_locator\n",
     "cb.update_ticks()\n",
-    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "# plt.colorbar(im)\n",
     "setlabel2(ax,'(b)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
@@ -409,9 +405,9 @@
     "# plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
     "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "cb.locator = tick_locator\n",
     "cb.update_ticks()\n",
-    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
     "# plt.colorbar(im)\n",
     "setlabel2(ax,'(f)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
@@ -428,7 +424,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(c)')\n",
     "plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax= fig.add_subplot(gs[2,1])\n",
@@ -441,7 +437,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(g)')\n",
     "plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax= fig.add_subplot(gs[3,0])\n",
@@ -510,7 +506,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(a)')\n",
     "# plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[1,0])\n",
@@ -524,7 +520,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(b)')\n",
     "# plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[2, 0])\n",
@@ -538,7 +534,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(c)')\n",
     "#plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax = fig.add_subplot(gs[3,0])\n",
@@ -552,7 +548,7 @@
     "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
     "setlabel2(ax,'(d)')\n",
     "#plt.xlim(1620,1680)\n",
-    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.62))\n",
+    "plt.legend([\"$p_{\\\\rm{gro}}(t)$\",\"$p_{\\\\rm{exc}}(t)$\",\"$p_{\\\\rm{ion}}(t)$\"],loc=(0.65,0.65))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
     "ax= fig.add_subplot(gs[0,1])\n",
@@ -904,9 +900,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
     "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
-    "ax=plt.subplot(4,1,1)\n",
+    "\n",
+    "ax=plt.axes([0.10,0.55,0.35,0.35])\n",
     "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
     "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -915,11 +912,16 @@
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.02,location='top')\n",
-    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "setlabelm(ax,'(a)',[-0.2,1.1])\n",
     "# plt.xlim(0,150)\n",
     "plt.ylim(min(y),10)\n",
-    "ax=plt.subplot(4,1,3)\n",
+    "\n",
+    "ax=plt.axes([0.10,0.10,0.35,0.35])\n",
     "data=np.loadtxt(intDir+'ktot.dat')\n",
     "np.savetxt(dir+\"data\\\\f9(2).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
@@ -928,14 +930,19 @@
     "z2=data[:,3]\n",
     "z3=data[:,4]\n",
     "z4=z1+z2+z3\n",
-    "\n",
-    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.02,location='top')\n",
-    "setlabelm(ax,'(c)',[-0.1,1.001])\n",
+    "im=ax.tricontourf(x,y,z2,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "setlabelm(ax,'(c)',[-0.2,1.1])\n",
     "plt.xlabel('Time (fs)')\n",
     "plt.ylabel('Momentum (arb.units)')\n",
-    "ax=plt.subplot(4,1,4)\n",
     "\n",
+    "\n",
+    "\n",
+    "ax=plt.axes([0.55,0.10,0.35,0.28])\n",
+    "# ax4 = plt.axes([0.6, 0.15, 0.35, 0.45])\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\onePump\\\\onepump200\\\\eneTRJVexc.dat')\n",
     "np.savetxt(dir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
     "t = data[:,0]\n",
@@ -946,15 +953,16 @@
     "}\n",
     "ax.stackplot(t, population_by_continent.values(),\n",
     "             labels=population_by_continent.keys(), alpha=1)\n",
-    "ax.legend(loc='upper center')#,bbox_to_anchor=(0.51, 0.9, 0.1, 0.1))\n",
+    "ax.legend(loc='lower center',ncol=3,fontsize=6,bbox_to_anchor=(0.10,1.05,0.8, 0.15))\n",
     "#ax.set_title('World population')\n",
+    "plt.ylim(-00.01,0.07)\n",
     "ax.set_xlabel('Time (fs)')\n",
     "ax.set_ylabel('Energy (a.u.)')\n",
     "# plt.colorbar(pad=0.01,visible=False)\n",
     "plt.xlim(min(t),max(t))\n",
-    "plt.ylim(0,0.06)\n",
-    "setlabelm(ax,'(d)',[-0.1,1.001])\n",
-    "ax=plt.subplot(4,1,2)\n",
+    "setlabelm(ax,'(d)',[-0.2,1.1])\n",
+    "\n",
+    "ax=plt.axes([0.55,0.55,0.35,0.35])\n",
     "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
@@ -962,11 +970,15 @@
     "z=data[:,2]\n",
     "# plt.xlim(TimeTurn+1,TimeEnd)\n",
     "#plt.ylim(min(y),180)\n",
-    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(pad=0.02,location='top')\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.66,aspect=10,format=\"%3.2f\")\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.1])\n",
+    "\n",
     "plt.subplots_adjust(left=0.125,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
@@ -974,15 +986,6 @@
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
     "plt.savefig(dir+'picture\\\\f99pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop"
    ]
   },
   {
@@ -1195,7 +1198,7 @@
     "dt=np.zeros((24))\n",
     "titleLoc='left'\n",
     "plt.figure(figsize=(16/2.54,13/2.54))\n",
-    "for i in range(0,24,1):\n",
+    "for i in range(0,22,1):\n",
     "    data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\'+str(i*10+100)+'\\\\Excradwave.dat')\n",
     "    data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\'+str(i*10+100)+'\\\\Ionradwave.dat')\n",
     "    plt.subplot(2,1,1)\n",
@@ -1217,7 +1220,7 @@
     "    #plt.xlim(TimeTurn,TimeEnd)\n",
     "    plt.ylim(1.75,10.0)\n",
     "    plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "    plt.colorbar()\n",
+    "    plt.colorbar(format=OOMFormatter(-3, mathText=False))\n",
     "    plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "    plt.ylabel(\"$R$ (a.u.)\")\n",
     "    \n",
