--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -966,7 +966,7 @@
     "data =np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\onepump2\\\\Excangwave.dat')\n",
     "#plt.style.use('_mpl-gallery-nogrid')\n",
     "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "y=data[:,1]/180\n",
     "z=data[:,2]\n",
     "# plt.xlim(TimeTurn+1,TimeEnd)\n",
     "#plt.ylim(min(y),180)\n",
@@ -976,7 +976,7 @@
     "cb.locator = tick_locator\n",
     "cb.update_ticks()\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "setlabelm(ax,'(b)',[-0.2,1.1])\n",
     "\n",
     "plt.subplots_adjust(left=0.125,\n",
