--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -116,7 +116,66 @@
     "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
     "\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
-    "os.startfile(dir)"
+    "# os.startfile(dir)\n",
+    "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.ticker as mtick\n",
+    "name='TwoColorPhaseIs2020'\n",
+    "plt.figure(figsize=(cm_to_inch(8*3),cm_to_inch(6.5)))\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.title(\"Electrical field\")\n",
+    "data=np.loadtxt(dir+\"laser.dat\")\n",
+    "np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "y=data[:,4]\n",
+    "#####plt.title(\"(a)\",titleLoc)\n",
+    "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
+    "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
+    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "#plt.xlim(19,21)\n",
+    "plt.plot(x1,y,'r--')\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "# plt.title(\"Enevlope\")\n",
+    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.title(\"Frequency  distribution\")\n",
+    "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
+    "np.savetxt(dir+\"FD\"+name+\".dat\",data)\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "plt.plot(y,x,'k-')\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.xlabel(\"Intensity (arb.units)\")\n",
+    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "plt.subplot(1,3,2)\n",
+    "plt.title(\"Spectrum\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "np.savetxt(dir+\"TFD\"+name+\".dat\",data)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "# plt.colorbar(pad= 0.05)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.ylabel(\"Instensity (a.u.)\")\n",
+    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "\n",
+    "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
+    "# os.startfile(dir)\n",
+    "os.startfile(dir+\"LaserTimFreDis1.\"+figureType)"
    ]
   },
   {
@@ -151,12 +210,12 @@
     "        plt.colorbar()\n",
     "        plt.xlabel(\"Time(fs)\")\n",
     "        plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.subplots_adjust(left=0.125,\n",
+    "plt.subplots_adjust(left=0.1,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
-    "                    hspace=0.3)\n",
+    "                    hspace=0.1)\n",
     "plt.savefig(dir+\"LaserTimFreDisto.\"+figureType,dpi=figureDPI)\n",
     "os.startfile(dir)\n",
     "# ax=plt.subplot(gs[0,1])\n",
