--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -113,8 +113,8 @@
    "source": [
     "intDir=\"D:\\\\doc\\\\data\\\\ion\\\\molecularData\\\\\"\n",
     "\n",
-    "plt.figure(figsize=(cm2inch(12),cm2inch(12)))\n",
-    "ax=plt.subplot(2,1,1)\n",
+    "plt.figure(figsize=(cm2inch(8*2),cm2inch(6.5)))\n",
+    "ax=plt.subplot(1,2,1)\n",
     "data=np.loadtxt(intDir+\"PotentialEnergy.dat\")\n",
     "np.savetxt(dir+\"data\\\\f1(1)PotentialEnergy.dat\",data)\n",
     "x=data[:,0]\n",
@@ -124,20 +124,20 @@
     "#plt.grid(False)\n",
     "x=x\n",
     "y=y3\n",
-    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.001])\n",
     "plt.xlabel('$\\\\textit{R}$ (a.u.)')\n",
-    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "plt.ylabel(\"Energy (a.u.)\")\n",
     "plt.plot(x,y1,'k-',x,y2,'r-.',x,y3,'b--')\n",
     "plt.xlim(1.75,11)\n",
     "plt.fill_between(x,y3,x,y3+0.2)\n",
     "plt.ylim(-0.05,0.5)\n",
-    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.8,0.65))\n",
-    "ax=plt.subplot(2,1,2)\n",
+    "plt.legend(['$X^1\\\\Sigma^+$','$A^1 \\\\Sigma ^+$','$X^2 \\\\Sigma ^+$'],loc=(0.6,0.65))\n",
+    "ax=plt.subplot(1,2,2)\n",
     "data=np.loadtxt(intDir+\"DipoleMoment.dat\")\n",
     "np.savetxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\",data)\n",
     "x=data[:,0]\n",
     "y=data[:,2]\n",
-    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "setlabelm(ax,'(b)',[-0.2,1.001])\n",
     "plt.xlabel(\"$\\\\textit{R}$  (a.u.)\")\n",
     "plt.ylabel(\"Intensity (D)\")\n",
     "plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-.',data[:,0],data[:,3],'b--')\n",
@@ -1328,9 +1328,7 @@
     "data5=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\ExcAngWave.dat')\n",
     "data6=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\IonAngWave.dat')    \n",
     "import matplotlib.gridspec as gridspec\n",
-    "\n",
     "gs = gridspec.GridSpec(3, 2)\n",
-    "\n",
     "ax = fig.add_subplot(gs[0,0])\n",
     "x=data1[:,0]\n",
     "y=data1[:,1]\n",
@@ -1400,6 +1398,40 @@
     "#     tick.set_rotation(55)\n",
     "plt.savefig(dir+'f4Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "plt.style.use('_mpl-gallery')\n",
+    "\n",
+    "# make data:\n",
+    "np.random.seed(3)\n",
+    "x = 0.5 + np.arange(8)\n",
+    "y = np.random.uniform(2, 7, len(x))\n",
+    "\n",
+    "# plot\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.bar(x, y, width=1, edgecolor=\"white\", linewidth=0.7)\n",
+    "\n",
+    "ax.set(xlim=(0, 8), xticks=np.arange(1, 8),\n",
+    "       ylim=(0, 8), yticks=np.arange(1, 8))\n",
+    "plt.savefig(\"a.jpeg\")\n",
+    "plt.show()\n",
+    "os.startfile(\"a.jpeg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
