--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -72,6 +72,7 @@
     "                             borderaxespad=0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             prop={'weight':'black'},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
