--- a/Python/xyPlot.ipynb
+++ b/Python/xyPlot.ipynb
@@ -14,11 +14,15 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  #\"font.size\": 16,\n",
-    "})\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "config = {\n",
+    "    \"font.family\":'serif',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
     "#plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(5))\n",
@@ -26,6 +30,28 @@
     "#plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "import numpy\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop='heavy',\n",
+    "                             fontsize=10,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
     "\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
@@ -33,7 +59,7 @@
     "#print(f.read(1500))\n",
     "levels=100\n",
     "figureDPI=1200\n",
-    "figureType=\"eps\"\n",
+    "figureType=\"jpeg\"\n",
     "dir='C:\\\\Users\\\\DELL\\\\Desktop\\\\'"
    ]
   },
@@ -60,11 +86,15 @@
     "# y3=fs(x1)\n",
     "# y4=fq(x1)\n",
     "#y5=fc(x1)\n",
-    "plt.plot(x,y,'.',x1,y1)#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
+    "# ax=plt.subplots()\n",
+    "ax=plt.subplot(1,1,1)\n",
+    "plt.plot(x,y)#,x1,y1)#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
     "#plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
+    "setlabelm(ax,'(a)',[-0.2,1.001])\n",
     "plt.xlabel(\"Delay time (fs)\")\n",
-    "plt.ylabel(\"Poplation\")\n",
-    "plt.savefig(dir+\"pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)"
+    "plt.ylabel(\"$\\pi$ Poplation\")\n",
+    "plt.savefig(dir+\"pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
+    "os.startfile(dir+\"pop.\"+figureType)"
    ]
   },
   {
