--- a/Python/xysplot.ipynb
+++ b/Python/xysplot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,16 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import rcParams\n",
+    "\n",
+    "config = {\n",
+    "    \"font.family\":'serif',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
     "\n",
     "def cm_to_inch(value):\n",
     "    return value/2.54\n",
@@ -84,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +104,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
   "orig_nbformat": 4,
