--- a/Python/orientation3d.ipynb
+++ b/Python/orientation3d.ipynb
@@ -11,50 +11,77 @@
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import os\n",
+    "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"sans-serif\",\n",
-    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
-    "plt.rcParams.update({\n",
-    "    \"text.usetex\": True,\n",
-    "    \"font.family\": \"serif\",\n",
-    "    #\"font.serif\": [\"Palatino\"],\n",
-    "    \"font.serif\": [\"Time New Roman\"], \n",
-    "})\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"sans-serif\",\n",
+    "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# # for Palatino and other serif fonts use:\n",
+    "# plt.rcParams.update({\n",
+    "#     \"text.usetex\": True,\n",
+    "#     \"font.family\": \"serif\",\n",
+    "#     #\"font.serif\": [\"Palatino\"],\n",
+    "#     \"font.serif\": [\"Time New Roman\"], \n",
+    "# })\n",
+    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
+    "# plt.rcParams.update({\n",
+    "#   \"text.usetex\": True,\n",
+    "#   \"font.family\": \"Time New Roman\",\n",
+    "#   \"font.size\": 8,\n",
+    "# })\n",
     "\n",
-    "def cm_to_inch(value):\n",
+    "\n",
+    "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
+    "plt.rcParams['xtick.labelsize'] = 6\n",
+    "plt.rcParams['ytick.labelsize'] = 6\n",
+    "plt.rcParams['legend.fontsize'] =6\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "config = {\n",
+    "    \"text.usetex\": False,\n",
+    "    \"font.family\":'serif',\n",
+    "    # \"font.family\":'stix',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    # \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
+    "\n",
+    "\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import numpy \n",
     "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
     "    legend = ax.get_legend()\n",
     "    if legend:\n",
     "        ax.add_artist(legend)\n",
-    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
     "    label_legend = ax.legend(handles=[line],\n",
-    "                             loc=[-0.15,1.001],\n",
-    "                             handlelength=0,\n",
-    "                             handleheight=0,\n",
-    "                             handletextpad=0,\n",
-    "                             borderaxespad=0,\n",
+    "                             loc=[-0.2,1.0005],\n",
+    "                             handlelength=0.0,\n",
+    "                             handleheight=0.0,\n",
+    "                             handletextpad=0.0,\n",
+    "                             borderaxespad=0.0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
@@ -72,14 +99,23 @@
     "                             borderaxespad=0,\n",
     "                             borderpad=borderpad,\n",
     "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
     "                             **kwargs)\n",
     "    label_legend.remove()\n",
     "    ax.add_artist(label_legend)\n",
     "    line.remove()\n",
+    "def sciformat(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\""
+    "timeUnit=\"fs\"\n",
+    "dir='D:\\\\doc\\\\data\\\\ion\\\\'"
    ]
   },
   {
@@ -172,29 +208,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "leg=['$\\\\vert$0,0$\\\\rangle$']\n",
-    "for i in range(0,3):\n",
-    "    if (i == 0):\n",
-    "        m=0\n",
-    "        data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
-    "        print(i,m)\n",
-    "        x=data[:,2]\n",
-    "        y=data[:,3]\n",
-    "        plt.plot(x,y)\n",
-    "        # leg=(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
-    "        # plt.legend(leg,ncol=3)\n",
-    "    else : \n",
+    "import matplotlib\n",
+    "leg=[]\n",
+    "# plt.figure(figsize=(16,13))\n",
+    "linsty=[\"-\",\"--\",\"-.\",\":\"]\n",
+    "jmin=2\n",
+    "jmax=2\n",
+    "n=0\n",
+    "for i in range(jmin,jmax+1):\n",
+    "    # if (i == 0):\n",
+    "    #     m=0\n",
+    "    #     data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
+    "    #     print(i,m)\n",
+    "    #     x=data[:,2]\n",
+    "    #     y=data[:,3]\n",
+    "    #     plt.plot(x,y,'-')\n",
+    "    #     leg=(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
+    "    #     # plt.legend(leg,ncol=3)\n",
+    "    # else : \n",
     "        for m in range(-i,i+1):\n",
     "            data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
     "            print(i,m)\n",
     "            x=data[:,2]\n",
     "            y=data[:,3]\n",
-    "            plt.plot(x,y)\n",
+    "            while n == len(linsty):\n",
+    "                n=n-len(linsty)\n",
+    "            plt.plot(x,y,ls=linsty[n])\n",
     "            leg.append(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
     "            # print(\"leg=\",leg)\n",
-    "plt.legend(leg,ncol=3,fontsize=\"5\")\n",
-    "plt.savefig(dir+\"PopuTot.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "plt.show()"
+    "            n=n+1\n",
+    "    # print(\"n \",n)\n",
+    "    \n",
+    "plt.xlim(0,25)\n",
+    "plt.legend(leg,ncol=2,fontsize=\"5\")\n",
+    "plt.savefig(dir+\"PopuTotOfJEq\"+str(jmin)+\"To\"+str(jmax)+\".\"+figureType,\n",
+    "            bbox_inches = 'tight',\n",
+    "            dpi=figureDPI)\n",
+    "plt.show()\n",
+    "os.startfile(dir+\"PopuTotOfJEq\"+str(jmin)+\"To\"+str(jmax)+\".\"+figureType)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib\n",
+    "\n",
+    "# plt.figure(figsize=(16,13))\n",
+    "linsty=[\"-\",\"--\",\"-.\",\":\"]\n",
+    "jmin=0\n",
+    "jmax=8\n",
+    "plt.figure(figsize=(8*3/2.54,6.5*3/2.54))\n",
+    "for s in range(jmin,jmax+1):\n",
+    "    n=0\n",
+    "    leg=[]\n",
+    "    plt.subplot(3,3,s+1)\n",
+    "    for i in range(s,s+1):\n",
+    "        # if (i == 0):\n",
+    "        #     m=0\n",
+    "        #     data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
+    "        #     print(i,m)\n",
+    "        #     x=data[:,2]\n",
+    "        #     y=data[:,3]\n",
+    "        #     plt.plot(x,y,'-')\n",
+    "        #     leg=(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
+    "        #     # plt.legend(leg,ncol=3)\n",
+    "        # else : \n",
+    "            for m in range(-i,i+1):\n",
+    "                data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
+    "                print(i,m)\n",
+    "                x=data[:,2]\n",
+    "                y=data[:,3]\n",
+    "                while n == len(linsty):\n",
+    "                    n=n-len(linsty)\n",
+    "                plt.plot(x,y,ls=linsty[n])\n",
+    "                leg.append(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
+    "                # print(\"leg=\",leg)\n",
+    "                n=n+1\n",
+    "        # print(\"n \",n)\n",
+    "    plt.xlim(0,25)\n",
+    "    plt.legend(leg,ncol=2,fontsize=\"5\")\n",
+    "plt.savefig(dir+\"PopuTotOfJEq\"+str(jmin)+\"To\"+str(jmax)+\".\"+figureType,\n",
+    "            bbox_inches = 'tight',\n",
+    "            dpi=figureDPI)\n",
+    "plt.show()\n",
+    "\n",
+    "os.startfile(dir+\"PopuTotOfJEq\"+str(jmin)+\"To\"+str(jmax)+\".\"+figureType)\n",
+    "os.startfile(dir)\n"
    ]
   },
   {
