--- a/Python/IonLaserPlot.ipynb
+++ b/Python/IonLaserPlot.ipynb
@@ -11,6 +11,7 @@
     "import matplotlib as mpl\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import os\n",
+    "from matplotlib import ticker\n",
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
@@ -18,47 +19,108 @@
     "#     \"text.usetex\": True,\n",
     "#     \"font.family\": \"sans-serif\",\n",
     "#     \"font.sans-serif\": [\"Time New Rroman\"]})\n",
-    "# for Palatino and other serif fonts use:\n",
+    "# # for Palatino and other serif fonts use:\n",
     "# plt.rcParams.update({\n",
     "#     \"text.usetex\": True,\n",
     "#     \"font.family\": \"serif\",\n",
     "#     #\"font.serif\": [\"Palatino\"],\n",
     "#     \"font.serif\": [\"Time New Roman\"], \n",
     "# })\n",
-    "# It's also possible to use the reduced notation by directly setting font.family:\n",
-    "plt.rcParams.update({\n",
-    "  \"text.usetex\": True,\n",
-    "  \"font.family\": \"Time New Roman\",\n",
-    "  \"font.size\": 8,\n",
-    "})\n",
-    "# font={'family':'serif',\n",
-    "#       'serif':'Time New Roman',\n",
-    "#       'weight':'normal',\n",
-    "#       'size':8}\n",
-    "# plt.rc('font',**font)\n",
-    "def cm_to_inch(value):\n",
+    "# # It's also possible to use the reduced notation by directly setting font.family:\n",
+    "# plt.rcParams.update({\n",
+    "#   \"text.usetex\": True,\n",
+    "#   \"font.family\": \"Time New Roman\",\n",
+    "#   \"font.size\": 8,\n",
+    "# })\n",
+    "\n",
+    "\n",
+    "def cm2inch(value):\n",
     "    return value/2.54\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "plt.rcParams['figure.figsize'] = (cm2inch(8), cm2inch(6.5))\n",
     "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
     "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='F:\\\\doc\\\\ion360\\\\t_30_60\\\\'\n",
+    "plt.rcParams['xtick.labelsize'] = 6\n",
+    "plt.rcParams['ytick.labelsize'] = 6\n",
+    "plt.rcParams['legend.fontsize'] =6\n",
+    "\n",
+    "from matplotlib import rcParams\n",
+    "config = {\n",
+    "    \"text.usetex\": False,\n",
+    "    \"font.family\":'serif',\n",
+    "    # \"font.family\":'stix',\n",
+    "    \"font.size\": 8,\n",
+    "    \"mathtext.fontset\":'stix',\n",
+    "    # \"font.serif\": ['SimSun'],\n",
+    "}\n",
+    "rcParams.update(config)\n",
+    "\n",
+    "\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import numpy \n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label,fillstyle='full')\n",
+    "    # legend_font = {\n",
+    "    # 'family': 'Times New Roman',\n",
+    "    # 'style':'normal',\n",
+    "    # 'size':10,\n",
+    "    # 'weight': \"bold\",\n",
+    "    # }\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.2,1.0005],\n",
+    "                             handlelength=0.0,\n",
+    "                             handleheight=0.0,\n",
+    "                             handletextpad=0.0,\n",
+    "                             borderaxespad=0.0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             shadow=True,\n",
+    "                             facecolor='gray',\n",
+    "                             prop={'weight':'bold','size':8},\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def sciformat(ax):\n",
+    "    formatter=ticker.ScalarFormatter(useMathText=True)\n",
+    "    formatter.set_scientific(True)\n",
+    "    formatter.set_powerlimits((0,0))\n",
+    "    ax.yaxis.set_major_formatter(formatter)\n",
+    "levels=100\n",
+    "figureDPI=1200\n",
+    "figureType=\"jpeg\"\n",
+    "timeUnit=\"fs\"\n",
     "dir='D:\\\\dataofpro\\\\'\n",
-    "#dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\t2\\\\'\n",
-    "#dir='D:\\\\doc\\\\data\\\\ion1test\\\\shift\\\\5\\\\'#\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
     "print(f.read(1500))\n",
-    "levels=100\n",
-    "figureDPI=300\n",
-    "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\""
+    "outdir='D:\\\\doc\\\\data\\\\pulse'"
    ]
   },
   {
@@ -79,30 +141,37 @@
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
     "y=data[:,4]\n",
+    "setlabel(ax,\"(b)\")\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
     "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "# plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
-    "plt.axes([0.1,0.55,0.35,0.35])\n",
+    "\n",
+    "ax=plt.axes([0.1,0.55,0.35,0.35])\n",
     "plt.plot(x1,y,'r--')\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "plt.title(\"Enevlope\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "plt.axes([0.55,0.1,0.35,0.35])\n",
+    "setlabel(ax,\"(a)\")\n",
+    "ax=plt.axes([0.55,0.1,0.35,0.35])\n",
+    "setlabel(ax,\"(d)\")\n",
     "plt.title(\"Frequency  distribution\")\n",
     "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
     "np.savetxt(dir+\"FD\"+name+\".dat\",data)\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(y,x,'k-')\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "plt.axes([0.1,0.1,0.35,0.35])\n",
+    "\n",
+    "ax=plt.axes([0.1,0.1,0.35,0.35])\n",
+    "setlabel(ax,\"(c)\")\n",
     "plt.title(\"Spectrum\")\n",
     "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
     "x=data[:,0]\n",
@@ -112,8 +181,8 @@
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
@@ -129,7 +198,8 @@
     "import matplotlib.ticker as mtick\n",
     "name='TwoColorPhaseIs2020'\n",
     "plt.figure(figsize=(cm_to_inch(8*3),cm_to_inch(6.5)))\n",
-    "plt.subplot(1,3,1)\n",
+    "ax=plt.subplot(1,3,1)\n",
+    "setlabel(ax,\"(a)\")\n",
     "plt.title(\"Electrical field\")\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "np.savetxt(dir+\"EF\"+name+\".dat\",data)\n",
@@ -140,8 +210,8 @@
     "y=data[:,4]\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
     "plt.plot(x1,y1,'k-')#,x1,y,'r--')\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "# ax.xaxis.set_major_formatter(mtick.FormatStrFormatter('%.2e'))\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "#plt.xlim(19,21)\n",
@@ -149,8 +219,9 @@
     "plt.xlabel(\"Time(fs)\")\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
     "# plt.title(\"Enevlope\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "plt.subplot(1,3,3)\n",
+    "\n",
+    "ax=plt.subplot(1,3,3)\n",
+    "setlabel(ax,\"(c)\")\n",
     "plt.title(\"Frequency  distribution\")\n",
     "data=np.loadtxt(dir+\"FreDis1.dat\")\n",
     "np.savetxt(dir+\"FD\"+name+\".dat\",data)\n",
@@ -159,10 +230,12 @@
     "plt.plot(y,x,'k-')\n",
     "plt.ylabel(\"Frequency (a.u.)\")\n",
     "plt.xlabel(\"Intensity (arb.units)\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
-    "plt.subplot(1,3,2)\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "\n",
+    "ax=plt.subplot(1,3,2)\n",
+    "setlabel(ax,\"(b)\")\n",
     "plt.title(\"Spectrum\")\n",
-    "data=np.loadtxt(dir+\"TimFreDis1.dat\")\n",
+    "data=np.loadtxt(dir+\"TimFreDis4.dat\")\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
@@ -170,8 +243,8 @@
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "# plt.colorbar(pad= 0.05)\n",
     "plt.xlabel(\"Time(fs)\")\n",
-    "plt.ylabel(\"Instensity (a.u.)\")\n",
-    "plt.ticklabel_format(style='sci',scilimits=(0,1))\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "\n",
     "plt.savefig(dir+\"LaserTimFreDis1.\"+figureType,dpi=figureDPI)\n",
     "# os.startfile(dir)\n",
@@ -215,7 +288,7 @@
     "                    right=0.9, \n",
     "                    top=0.9, \n",
     "                    wspace=0.3, \n",
-    "                    hspace=0.1)\n",
+    "                    hspace=0.3)\n",
     "plt.savefig(dir+\"LaserTimFreDisto.\"+figureType,dpi=figureDPI)\n",
     "os.startfile(dir)\n",
     "# ax=plt.subplot(gs[0,1])\n",
@@ -259,20 +332,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=(8/2.54,6.5*3/2.54))\n",
     "data=np.loadtxt(dir+\"laser.dat\")\n",
     "x1=data[:,0]\n",
     "y1=data[:,1]\n",
     "y2=data[:,2]\n",
     "y3=data[:,3]\n",
     "#####plt.title(\"(a)\",titleLoc)\n",
-    "plt.subplot(3,1,1)\n",
+    "ax=plt.subplot(3,1,1)\n",
     "plt.plot(x1,y1,'k-')\n",
-    "plt.subplot(3,1,2)\n",
+    "setlabel(ax,\"(a)\")\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "ax=plt.subplot(3,1,2)\n",
     "plt.ylabel(\"Instensity (a.u.)\")  \n",
+    "setlabel(ax,\"(b)\")\n",
     "plt.plot(x1,y2)\n",
-    "plt.subplot(3,1,3)\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "ax=plt.subplot(3,1,3)\n",
     "plt.plot(x1,y3)\n",
-    "plt.xlabel(\"Time(fs)\")"
+    "setlabel(ax,\"(c)\")\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
+    "plt.xlabel(\"Time(fs)\")\n",
+    "plt.subplots_adjust(bottom=0.1,\n",
+    "                    left=0.1,\n",
+    "                    wspace=0.3,\n",
+    "                    hspace=0.2\n",
+    ")"
    ]
   },
   {
@@ -394,10 +479,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.ticker as ticker\n",
     "data=np.loadtxt(dir+\"FreDis4.dat\")\n",
+    "ax=plt.subplot()\n",
+    "\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "plt.plot(x,y,'k-')\n",
+    "\n",
+    "ax.yaxis.set_major_formatter(formatsci)\n",
     "plt.xlabel(\"Frequency (a.u.)\")\n",
     "plt.ylabel(\"Intensity (arb.units)\")\n",
     "plt.savefig(dir+\"FreDistTotal.\"+figureType,dpi=figureDPI)"
@@ -483,13 +573,6 @@
     "                    hspace=0.22)\n",
     "plt.savefig(dir+\"TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
